# Numerical-Method-in-Rust

./: README.md
finding_root/: Cargo.toml  README.md  rustfmt.toml
finding_root/bisection/: Cargo.toml
finding_root/bisection/src/: lib.rs
finding_root/example/: Cargo.toml
finding_root/newton_raphson/: Cargo.toml
finding_root/newton_raphson/src/: lib.rs
finding_root/plot/: Cargo.toml
finding_root/plot/src/: lib.rs
newton_raphson/: Cargo.toml
newton_raphson/src/: main.rs
