[package]
name = "example"
version = "0.1.0"
authors = ["mohammedaugie13 <mohammedaugie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
newton_raphson = {path = "../newton_raphson"}


[[bin]]
name = "nr"
test = false
